[gd_scene load_steps=16 format=3 uid="uid://c7naugsspfwbi"]

[ext_resource type="PackedScene" uid="uid://df4ydop0drcb6" path="res://Main/Data/Scene/player.tscn" id="1_56qi7"]
[ext_resource type="Texture2D" uid="uid://p5xb2weje3fk" path="res://Asset/tile_set.png" id="1_xakbw"]
[ext_resource type="PackedScene" uid="uid://cpj5rtpiq5d5i" path="res://Main/Data/Scene/shelf.tscn" id="3_kt1og"]
[ext_resource type="Script" path="res://Main/Data/Script/BuildService.gd" id="4_6s3ha"]
[ext_resource type="PackedScene" uid="uid://ciyfid66c5ied" path="res://Main/Data/Scene/package.tscn" id="6_5qldv"]
[ext_resource type="PackedScene" uid="uid://bepg6438562it" path="res://Main/Data/Scene/stand.tscn" id="6_fx1jw"]
[ext_resource type="Texture2D" uid="uid://ok4vbkiaqjf0" path="res://Asset/build_back.png" id="6_ly1i0"]
[ext_resource type="Script" path="res://Main/Data/Script/BuildMenu.gd" id="7_q3omt"]
[ext_resource type="PackedScene" uid="uid://b2pf0srht2hr4" path="res://Main/Data/Scene/hanger.tscn" id="7_u08aj"]
[ext_resource type="Theme" uid="uid://cyx5vjugx1lim" path="res://Theme/our_theme.tres" id="7_ykg55"]
[ext_resource type="PackedScene" uid="uid://csc1vxhhtes3a" path="res://UI/BuildObjectContainer.tscn" id="9_2nmlh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dc5yc"]
texture = ExtResource("1_xakbw")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/y_sort_origin = 15
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 8, 16, 8, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/y_sort_origin = 15
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/y_sort_origin = 15
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, 16, 16, -16, 16, -16, -16)
3:0/0 = 0
3:0/0/y_sort_origin = 15
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -1.25, 16, -1, 16, 16, -16, 16)
4:0/0 = 0
4:0/0/y_sort_origin = 15
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_1vg1o"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_dc5yc")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eoule"]
size = Vector2(192, 96)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nls4t"]

[node name="main" type="Node2D"]
texture_filter = 1

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
texture_filter = 1
tile_set = SubResource("TileSet_1vg1o")
cell_quadrant_size = 32
format = 2
layer_0/name = "Ground"
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(65537, 65536, 0, 131073, 65536, 0, 65538, 65536, 0, 131074, 65536, 0, 65539, 65536, 0, 131075, 65536, 0, 65540, 65536, 0, 65541, 65536, 0, 65542, 65536, 0, 196609, 65536, 0, 262145, 65536, 0, 327681, 65536, 0, 393217, 65536, 0, 196610, 65536, 0, 262146, 65536, 0, 327682, 65536, 0, 393218, 0, 0, 196611, 65536, 0, 262147, 65536, 0, 327683, 65536, 0, 393219, 0, 0, 131076, 65536, 0, 196612, 65536, 0, 262148, 65536, 0, 327684, 65536, 0, 393220, 0, 0, 131077, 65536, 0, 196613, 65536, 0, 327685, 65536, 0, 393221, 0, 0, 131078, 65536, 0, 196614, 65536, 0, 327686, 65536, 0, 393222, 0, 0, 65543, 65536, 0, 131079, 65536, 0, 196615, 65536, 0, 327687, 65536, 0, 393223, 65536, 0, 65544, 65536, 0, 131080, 65536, 0, 196616, 65536, 0, 65545, 65536, 0, 131081, 65536, 0, 196617, 65536, 0, 262153, 65536, 0, 327689, 65536, 0, 393225, 65536, 0, 65546, 65536, 0, 131082, 65536, 0, 196618, 65536, 0, 262154, 65536, 0, 327690, 65536, 0, 393226, 65536, 0, 65547, 65536, 0, 131083, 65536, 0, 196619, 65536, 0, 65548, 65536, 0, 131084, 65536, 0, 196620, 65536, 0, 65549, 65536, 0, 131085, 65536, 0, 196621, 65536, 0, 65550, 65536, 0, 131086, 65536, 0, 196622, 65536, 0, 65551, 65536, 0, 131087, 65536, 0, 196623, 65536, 0, 65552, 65536, 0, 131088, 65536, 0, 196624, 65536, 0, 393227, 65536, 0, 393228, 65536, 0, 393229, 65536, 0, 393230, 65536, 0, 393231, 65536, 0, 393232, 65536, 0, 262155, 65536, 0, 262156, 65536, 0, 262157, 65536, 0, 262158, 65536, 0, 262159, 65536, 0, 262160, 65536, 0, 327691, 65536, 0, 327692, 65536, 0, 327693, 65536, 0, 327694, 65536, 0, 327695, 65536, 0, 327696, 65536, 0)
layer_1/name = "Object"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(1, 196608, 0, 2, 196608, 0, 3, 196608, 0, 4, 196608, 0, 5, 196608, 0, 6, 196608, 0, 7, 196608, 0, 8, 196608, 0, 9, 196608, 0, 10, 196608, 0, 11, 196608, 0, 12, 196608, 0, 13, 196608, 0, 14, 196608, 0, 15, 196608, 0, 16, 196608, 0, 262150, 196608, 0, 262151, 196608, 0, 458753, 196608, 0, 458754, 196608, 0, 458755, 196608, 0, 458756, 196608, 0, 458757, 196608, 0, 458758, 196608, 0, 458759, 196608, 0, 458752, 262144, 0, 458760, 262144, 0, 458769, 262144, 0, 262149, 262144, 0, 262152, 131072, 0, 327688, 131072, 0, 393224, 131072, 0, 0, 131072, 0, 65536, 131072, 0, 131072, 131072, 0, 196608, 131072, 0, 262144, 131072, 0, 327680, 131072, 0, 393216, 131072, 0, 17, 131072, 0, 65553, 131072, 0, 131089, 131072, 0, 196625, 131072, 0, 262161, 131072, 0, 327697, 131072, 0, 393233, 131072, 0)
layer_2/name = "High"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 1
layer_2/tile_data = PackedInt32Array()
metadata/_edit_lock_ = true

[node name="Player" parent="TileMap" instance=ExtResource("1_56qi7")]
y_sort_enabled = false
position = Vector2(176, 106)

[node name="Package2" parent="TileMap" instance=ExtResource("6_5qldv")]
position = Vector2(299, 115)
content_type = 2

[node name="Package" parent="TileMap" instance=ExtResource("6_5qldv")]
position = Vector2(257, 98)
content_type = 1

[node name="BuildService" type="Node2D" parent="." node_paths=PackedStringArray("tile_node")]
y_sort_enabled = true
script = ExtResource("4_6s3ha")
tile_node = NodePath("../TileMap")
placement_color = [Color(1, 1, 1, 0.784314), Color(0.815686, 0.243137, 0.164706, 0.784314)]
stand_scenes = {
"Hanger": ExtResource("7_u08aj"),
"Shelf": ExtResource("3_kt1og"),
"Stand": ExtResource("6_fx1jw")
}

[node name="BuildArea" type="Sprite2D" parent="BuildService"]
modulate = Color(1, 1, 1, 0.498039)
z_index = -1
position = Vector2(416, 128)
scale = Vector2(7.96875, 5.96875)
texture = ExtResource("6_ly1i0")

[node name="Area2D" type="Area2D" parent="BuildService/BuildArea"]
scale = Vector2(0.166667, 0.333333)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuildService/BuildArea/Area2D"]
shape = SubResource("RectangleShape2D_eoule")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="BuildMenu" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("7_q3omt")

[node name="PanelContainer" type="PanelContainer" parent="BuildMenu"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -463.0
offset_top = -476.0
offset_right = 442.0
offset_bottom = 483.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_nls4t")

[node name="Panel" type="Panel" parent="BuildMenu/PanelContainer"]
layout_mode = 2
theme = ExtResource("7_ykg55")

[node name="MarginContainer" type="MarginContainer" parent="BuildMenu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="BuildMenu/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HeaderContainer" type="MarginContainer" parent="BuildMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="BuildMenu/PanelContainer/MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Spacer2" type="Control" parent="BuildMenu/PanelContainer/MarginContainer/VBoxContainer/HeaderContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="Cost" type="Label" parent="BuildMenu/PanelContainer/MarginContainer/VBoxContainer/HeaderContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Cost:"

[node name="Spacer3" type="Control" parent="BuildMenu/PanelContainer/MarginContainer/VBoxContainer/HeaderContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Cost3" type="Label" parent="BuildMenu/PanelContainer/MarginContainer/VBoxContainer/HeaderContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Name:"

[node name="Spacer4" type="Control" parent="BuildMenu/PanelContainer/MarginContainer/VBoxContainer/HeaderContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BuildObjectContainer" parent="BuildMenu/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("9_2nmlh")]
layout_mode = 2

[node name="BuildObjectContainer2" parent="BuildMenu/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("9_2nmlh")]
layout_mode = 2

[node name="BuildObjectContainer3" parent="BuildMenu/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("9_2nmlh")]
layout_mode = 2

[node name="BuildObjectContainer4" parent="BuildMenu/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("9_2nmlh")]
layout_mode = 2

[node name="BuildObjectContainer5" parent="BuildMenu/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("9_2nmlh")]
layout_mode = 2

[node name="BuildObjectContainer6" parent="BuildMenu/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("9_2nmlh")]
layout_mode = 2

[connection signal="mouse_entered" from="BuildService/BuildArea/Area2D" to="BuildService" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="BuildService/BuildArea/Area2D" to="BuildService" method="_on_area_2d_mouse_exited"]
[connection signal="chose_building_option" from="BuildMenu" to="BuildService" method="_on_build_menu_chose_building_option"]
